--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# ignore YOLO weight file
+*.weights
+
+# ignore JPG images except of example image
+*.jpg
